<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logix_orange"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="13"
    >


<TextView
    android:id="@+id/sign_up_title"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:layout_marginTop="5dp"
    android:layout_weight="2"
    android:gravity="center_vertical"
    android:paddingLeft="15dp"
    android:text="@string/sign_up_title"
    android:textColor="@android:color/white"
    android:textSize="25sp"
   android:fontFamily="sans-serif-condensed"
    />

<EditText
android:id="@+id/sign_up_first_name"
style="@style/sign_up_text_edit"
android:hint="@string/sign_up_first_name"
    />


    <EditText
        android:inputType="textPassword"
        android:ems="10"
        style="@style/sign_up_text_edit"
        android:id="@+id/sign_up_password"
        android:hint="@string/sign_in_password"
        />


    <EditText
        android:inputType="textPassword"
        android:ems="10"
        style="@style/sign_up_text_edit"
        android:id="@+id/sign_up_confirm_password"
        android:hint="@string/sign_up_confirm_password"
        />

    <EditText
        android:id="@+id/sign_up_email"
        style="@style/sign_up_text_edit"
        android:ems="10"
        android:hint="@string/sign_up_email"
        android:inputType="textEmailAddress"
        />

<Button
    android:id="@+id/sign_up_sign_up"
    style="@style/sign_in_button"
    android:layout_weight="1.5"
    android:layout_marginTop="32dp"
    android:layout_gravity="right"
    android:text="@string/sign_in_sign_up"/>


    </LinearLayout>

