

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/logix_orange"
    android:weightSum="10"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textSize="30sp"
        android:text="@string/sign_in_title"
        android:id="@+id/sign_in_title"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center"
        android:gravity="center_vertical|end"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
       />

    <EditText
        android:id="@+id/sign_in_email"
        android:hint="@string/sign_in_username"
        style="@style/sign_in_text_edit"
        />

    <EditText
        android:inputType="textPassword"
        android:ems="10"
        style="@style/sign_in_text_edit"
        android:id="@+id/sign_in_password"
        android:hint="@string/sign_in_password"
        />

    <Button
        android:id="@+id/sign_in_sign_in"
        android:text="@string/sign_in_button"
        style="@style/sign_in_button"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:textSize="15sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/white"
            android:layout_marginBottom="5dp"
            android:text="@string/sign_in_not_a_member"
        android:id="@+id/sign_in_not_a_member" />

        <Button
            android:text="@string/sign_in_sign_up"
            android:id="@+id/sign_in_sign_up"
            android:layout_weight="1"
            android:layout_gravity="start"
            style="@style/sign_in_button"/>
    </LinearLayout>


</LinearLayout>

